Add like btn functionality

--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
               <figure class="rounded-xl w-[50px] bg-iconBg p-3.5">
                 <img src="./assets/emergency.png" alt="Emergency Icon" />
               </figure>
-              <i class="fa-regular fa-heart text-gray-1 text-xl"></i>
+              <i
+                class="fa-regular fa-heart cursor-pointer text-gray-1 text-xl"></i>
             </div>
 
             <div>
@@ -177,7 +178,8 @@
               <figure class="rounded-xl w-[50px] bg-[#DFEFFF] p-3.5">
                 <img src="./assets/police.png" alt="Police Icon" />
               </figure>
-              <i class="fa-regular fa-heart text-gray-1 text-xl"></i>
+              <i
+                class="fa-regular fa-heart cursor-pointer text-gray-1 text-xl"></i>
             </div>
             <div>
               <h2 class="heading-secondary">পুলিশ</h2>
@@ -217,7 +219,8 @@
               <figure class="rounded-xl w-[50px] bg-iconBg p-3.5">
                 <img src="./assets/fire-service.png" alt="Fire Service Icon" />
               </figure>
-              <i class="fa-regular fa-heart text-gray-1 text-xl"></i>
+              <i
+                class="fa-regular fa-heart cursor-pointer text-gray-1 text-xl"></i>
             </div>
             <div>
               <h2 class="heading-secondary">ফায়ার সার্ভিস</h2>
@@ -258,7 +261,8 @@
               <figure class="rounded-xl w-[50px] bg-iconBg p-3.5">
                 <img src="./assets/ambulance.png" alt="Ambulance Icon" />
               </figure>
-              <i class="fa-regular fa-heart text-gray-1 text-xl"></i>
+              <i
+                class="fa-regular fa-heart cursor-pointer text-gray-1 text-xl"></i>
             </div>
             <div>
               <h2 class="heading-secondary">অ্যাম্বুলেন্স</h2>
@@ -300,7 +304,8 @@
                   src="./assets/prenatal-care.png"
                   alt="Prenatal Care Icon" />
               </figure>
-              <i class="fa-regular fa-heart text-gray-1 text-xl"></i>
+              <i
+                class="fa-regular fa-heart cursor-pointer text-gray-1 text-xl"></i>
             </div>
             <div>
               <h2 class="heading-secondary">নারী ও শিশু সহায়তা</h2>
@@ -342,7 +347,8 @@
                   src="./assets/anti-corruption.png"
                   alt="Anti Corruption Icon" />
               </figure>
-              <i class="fa-regular fa-heart text-gray-1 text-xl"></i>
+              <i
+                class="fa-regular fa-heart cursor-pointer text-gray-1 text-xl"></i>
             </div>
             <div>
               <h2 class="heading-secondary">দুদক</h2>
@@ -382,7 +388,8 @@
               <figure class="rounded-xl w-[50px] bg-iconBg p-3.5">
                 <img src="./assets/outage.png" alt="Electricity Outage Icon" />
               </figure>
-              <i class="fa-regular fa-heart text-gray-1 text-xl"></i>
+              <i
+                class="fa-regular fa-heart cursor-pointer text-gray-1 text-xl"></i>
             </div>
             <div>
               <h2 class="heading-secondary">বিদ্যুৎ বিভ্রাট</h2>
@@ -422,7 +429,8 @@
               <figure class="rounded-xl w-[50px] bg-iconBg p-3.5">
                 <img src="./assets/brac.png" alt="Brac Icon" />
               </figure>
-              <i class="fa-regular fa-heart text-gray-1 text-xl"></i>
+              <i
+                class="fa-regular fa-heart cursor-pointer text-gray-1 text-xl"></i>
             </div>
             <div>
               <h2 class="heading-secondary">ব্র্যাক</h2>
@@ -464,7 +472,8 @@
                   src="./assets/Bangladesh-Railway.png"
                   alt="Bangladesh Railway Icon" />
               </figure>
-              <i class="fa-regular fa-heart text-gray-1 text-xl"></i>
+              <i
+                class="fa-regular fa-heart cursor-pointer text-gray-1 text-xl"></i>
             </div>
             <div>
               <h2 class="heading-secondary">বাংলাদেশ রেলওয়ে</h2>
@@ -540,5 +549,7 @@
         </aside>
       </section>
     </main>
+
+    <script src="./script.js"></script>
   </body>
 </html>
