Add clear history functionality

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
             </div>
             <button
               id="clearBtn"
-              class="flex justify-center items-center rounded-full p-3 w-[90px] gap-1 text-white bg-primary cursor-pointer">
+              class="flex justify-center items-center rounded-full p-3 w-[90px] gap-1 text-white bg-primary cursor-pointer hover:bg-[#013223]">
               <span class="font-semibold">Clear</span>
             </button>
           </div>
