Add copy functionality

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <!-- pill 1 -->
           <div
             class="bg-[#41FF6B1A] flex justify-center items-center rounded-full p-3 w-[123px] gap-1.5">
-            <span id="likeNum" class="text-black font-extrabold">0</span>
+            <span id="likeNum" class="text-black font-extrabold"></span>
             <figure>
               <img class="h-6" src="./assets/heart.png" alt="Heart Icon" />
             </figure>
@@ -97,7 +97,7 @@
           <!-- pill 3 -->
           <div
             class="flex justify-center items-center rounded-full p-3 w-[123px] gap-1 text-white bg-primary">
-            <span class="font-extrabold" id="copyNum">0</span>
+            <span class="font-extrabold" id="copyNum"></span>
             <span class="font-semibold">Copy</span>
           </div>
         </div>
@@ -160,7 +160,7 @@
 
             <div class="flex items-center gap-2 w-full">
               <button
-                class="btn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
+                class="btn copyBtn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
                 <i class="fa-regular fa-copy"></i>
                 Copy
               </button>
@@ -201,7 +201,7 @@
             </div>
             <div class="flex items-center gap-2 w-full">
               <button
-                class="btn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
+                class="btn copyBtn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
                 <i class="fa-regular fa-copy"></i>
                 Copy
               </button>
@@ -243,7 +243,7 @@
 
             <div class="flex items-center gap-2 w-full">
               <button
-                class="btn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
+                class="btn copyBtn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
                 <i class="fa-regular fa-copy"></i>
                 Copy
               </button>
@@ -284,7 +284,7 @@
             </div>
             <div class="flex items-center gap-2 w-full">
               <button
-                class="btn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
+                class="btn copyBtn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
                 <i class="fa-regular fa-copy"></i>
                 Copy
               </button>
@@ -327,7 +327,7 @@
             </div>
             <div class="flex items-center gap-2 w-full">
               <button
-                class="btn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
+                class="btn copyBtn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
                 <i class="fa-regular fa-copy"></i>
                 Copy
               </button>
@@ -370,7 +370,7 @@
             </div>
             <div class="flex items-center gap-2 w-full">
               <button
-                class="btn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
+                class="btn copyBtn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
                 <i class="fa-regular fa-copy"></i>
                 Copy
               </button>
@@ -411,7 +411,7 @@
             </div>
             <div class="flex items-center gap-2 w-full">
               <button
-                class="btn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
+                class="btn copyBtn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
                 <i class="fa-regular fa-copy"></i>
                 Copy
               </button>
@@ -452,7 +452,7 @@
             </div>
             <div class="flex items-center gap-2 w-full">
               <button
-                class="btn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
+                class="btn copyBtn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
                 <i class="fa-regular fa-copy"></i>
                 Copy
               </button>
@@ -495,7 +495,7 @@
             </div>
             <div class="flex items-center gap-2 w-full">
               <button
-                class="btn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
+                class="btn copyBtn bg-white basis-1/2 text-gray-1 border-gray-2 hover:bg-gray-2 font-roboto">
                 <i class="fa-regular fa-copy"></i>
                 Copy
               </button>
